[project]
name = "iptv"
version = "0.1.0"
description = "iptv client"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.11",
    "colorama>=0.4.6",
    "dask>=2025.5.1",
    "ffmpeg>=1.4",
    "ffmpeg-python>=0.2.0",
    "loguru>=0.6.0",
    "numba>=0.61.2",
    "numpy>=1.23.5",
    "opencv-python>=4.5.0",
    "pandas>=2.3.0",
    "psutil>=7.0.0",
    "pyarrow>=20.0.0",
    "pyperclip>=1.8.2",
    "pyside6>=6.0.0",
    "requests>=2.28.1",
    "tqdm>=4.64.1",
]
